// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.connect.agent_service.v1alpha1;

import "proto/agent/v1alpha1/agent.proto";
import "proto/federated_service/v1alpha1/federated_service.proto";
import "proto/spire/api/types/bundle.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/connect/agent_service/v1alpha1";

service AgentService {
  rpc CreateAgentJoinToken(CreateAgentJoinTokenRequest) returns (CreateAgentJoinTokenResponse) {}

  rpc UpdateTrustZoneBundle(UpdateTrustZoneBundleRequest) returns (UpdateTrustZoneBundleResponse) {}
  rpc UpdateAgentStatus(UpdateAgentStatusRequest) returns (UpdateAgentStatusResponse) {}

  rpc RegisterFederatedService(RegisterFederatedServiceRequest) returns (RegisterFederatedServiceResponse) {}
  rpc DeregisterFederatedService(DeregisterFederatedServiceRequest) returns (DeregisterFederatedServiceResponse) {}
  rpc UpdateFederatedService(UpdateFederatedServiceRequest) returns (UpdateFederatedServiceResponse) {}
  rpc GetFederatedService(GetFederatedServiceRequest) returns (GetFederatedServiceResponse) {}
  rpc ListFederatedServices(ListFederatedServicesRequest) returns (ListFederatedServicesResponse) {}
}

message CreateAgentJoinTokenRequest {
  optional string trust_zone_id = 1;
  optional string cluster_id = 2;
}

message CreateAgentJoinTokenResponse {
  optional string agent_token = 1;
}

message UpdateTrustZoneBundleRequest {
  spire.api.types.Bundle bundle = 1;
  string trust_zone_id = 2;
}

message UpdateTrustZoneBundleResponse {}

message UpdateAgentStatusRequest {
  proto.agent.v1alpha1.AgentStatus status = 1;
}

message UpdateAgentStatusResponse {}

message RegisterFederatedServiceRequest {
  proto.federated_service.v1alpha1.FederatedService service = 1;
}

message RegisterFederatedServiceResponse {
  string service_id = 1;
}

message DeregisterFederatedServiceRequest {
  string service_id = 1;
}

message DeregisterFederatedServiceResponse {
  string service_id = 1;
}

message UpdateFederatedServiceRequest {
  proto.federated_service.v1alpha1.FederatedService service = 1;
}

message UpdateFederatedServiceResponse {
  string service_id = 1;
}

message GetFederatedServiceRequest {
  string service_id = 1;
}

message GetFederatedServiceResponse {
  proto.federated_service.v1alpha1.FederatedService service = 1;
}

message ListFederatedServicesRequest {
  string org_id = 1;
}

message ListFederatedServicesResponse {
  repeated proto.federated_service.v1alpha1.FederatedService services = 1;
}
